test/langtools/tools/javac/LocalFreeVarStaticInstantiate.out
LocalFreeVarStaticInstantiate.java:16:17: compiler.err.non-static.cant.be.ref: kindname.method, foo(java.lang.Object)
1 error
